Fix critical compilation and runtime bugs
Co-authored-by: rikkumahan <172636053+rikkumahan@users.noreply.github.com>